<resources>
    <string name="app_name">CommonWealth</string>
    <string name="first_Project"></string>
    <string name="second_project"></string>
    <string name="third_project"></string>
    <string name="fourth_project"></string>
    <string name="fifth_project"></string>
    <string name="Add_project">Add new project</string>
    <string name="project_name"></string>
    <string name="num_of_help"></string>
    <string name="location"></string>
    <string name="name"></string>
    <string name="search_docs">Enter search term</string>
    <string name="title_activity_maps">Map</string>
</resources>